--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".All_Meds"></activity>
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".MainProfileLoadActivity" />
         <activity android:name=".RegistrationActivity" />
@@ -24,9 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name="AlarmBroadCastReceiver">
+
+        <receiver android:name=".AlarmBroadCastReceiver">
             <intent-filter>
-                <action android:name="android.alarm.receiver"/>
+                <action android:name="android.alarm.receiver" />
             </intent-filter>
         </receiver>
     </application>
