--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".All_Meds"></activity>
-        <activity android:name=".dosageActivity"></activity>
+        <activity android:name=".PrescriptionDetails"></activity>
+        <activity android:name=".MedicationDetails" />
+        <activity android:name=".All_Meds" />
+        <activity android:name=".dosageActivity" />
         <activity android:name=".calendarActivity" />
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".SettingsActivity" />
