--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".dosageActivity"></activity>
-        <activity android:name=".calendarActivity" />
+        <activity android:name=".calendarActivity"></activity>
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".MainProfileLoadActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RefillActivity" />
+        <activity android:name=".ScheduleActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <receiver android:name=".AlarmBroadCastReceiver">
