(REF)[Anan,Stephen] Massive refactor to match coding style and remove unused imports (also finished prescription card layout)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".PrescriptionDetails"/>
         <activity android:name=".MedicationDetails" />
-        <activity android:name=".AllMeds" />
+        <activity android:name=".AllMedications" />
         <activity android:name=".dosageActivity" />
         <activity android:name=".calendarActivity" />
         <activity android:name=".dosageActivity"/>
