--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".PrescriptionDetails"/>
+        <activity
+            android:name=".TestBottom"
+            android:label="@string/title_activity_test_bottom"></activity>
+        <activity android:name=".PrescriptionDetails" />
         <activity android:name=".MedicationDetails" />
         <activity android:name=".AllMedications" />
         <activity android:name=".dosageActivity" />
@@ -30,7 +33,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <receiver android:name=".AlarmBroadCastReceiver">
