(TEST) (Jordan,Emilio) Added espresso tests for navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <uses-library android:name="android.test.runner"
+            android:required="false" />
+        <uses-library android:name="android.test.base"
+            android:required="false" />
+        <uses-library android:name="android.test.mock"
+            android:required="false" />
         <activity android:name=".PrescriptionEdit"></activity>
-        <activity
-            android:name=".TestBottom"
-            android:label="@string/title_activity_test_bottom" />
         <activity android:name=".MedicationDetails" />
         <activity android:name=".AllMedications" />
         <activity android:name=".dosageActivity" />
