--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation "com.android.support:support-core-utils:28.0.0"
 
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
