--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,24 +13,40 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <uses-library android:name="android.test.runner"
+        <activity android:name=".Fragments.BlankFragment"></activity>
+        <activity
+            android:name=".Fragments.MedFragment"
+            android:label="@string/title_activity_med_fragment"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MedPerscriptionFragment"
+            android:label="@string/title_activity_med_perscription_fragment"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <uses-library
+            android:name="android.test.runner"
             android:required="false" />
-        <uses-library android:name="android.test.base"
+        <uses-library
+            android:name="android.test.base"
             android:required="false" />
-        <uses-library android:name="android.test.mock"
+        <uses-library
+            android:name="android.test.mock"
             android:required="false" />
-        <activity android:name=".PrescriptionEdit"></activity>
-        <activity android:name=".MedicationDetails" />
-        <activity android:name=".AllMedications" />
-        <activity android:name=".dosageActivity" />
-        <activity android:name=".calendarActivity" />
-        <activity android:name=".EditProfileActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".MainProfileLoadActivity" />
-        <activity android:name=".RegistrationActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RefillActivity" />
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".Activities.PrescriptionEditActivity" />
+        <activity android:name=".Activities.MedicationDetailsActivity" />
+        <activity android:name=".Fragments.AllMedicationFragment" />
+        <activity android:name=".Activities.dosageActivity" />
+        <activity android:name=".Fragments.CalendarFragment" />
+        <activity android:name=".Activities.EditProfileActivity" />
+        <activity android:name=".Activities.SettingsActivity" />
+        <activity android:name=".Fragments.ProfileFragment" />
+        <activity android:name=".Activities.RegistrationActivity" />
+        <activity android:name=".Activities.LoginActivity" />
+        <activity android:name=".Activities.RefillActivity" />
+        <activity
+            android:name=".Activities.NavigationActivity"
+            android:label="@string/title_activity_navigation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +54,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".AlarmBroadCastReceiver">
+        <receiver android:name=".Receivers.AlarmBroadCastReceiver">
             <intent-filter>
                 <action android:name="android.alarm.receiver" />
             </intent-filter>
