--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
             android:name="android.test.mock"
             android:required="false" />
 
-        <activity android:name=".EmployeeProfileActivity"></activity>
         <activity android:name=".Activities.PrescriptionEditActivity" />
         <activity android:name=".Activities.MedicationDetailsActivity" />
         <activity android:name=".Activities.dosageActivity" />
@@ -36,7 +35,8 @@
         <activity android:name=".Activities.RefillActivity" />
         <activity
             android:name=".Activities.NavigationActivity"
-            android:label="@string/title_activity_navigation">
+            android:label="@string/title_activity_navigation"
+            android:configChanges="orientation|screenSize|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
